2018-02-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:): Make
	sure nominal gets always set.

2018-02-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAlert.m (NSBeginAlertSheet): Move closing the sheet from
	here...
	* Source/NSApplication.m (-beginSheet:...:contextInfo:): ...to here.

2018-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/speech/GNUmakefile,
	* configure.ac: Give up on dynamic library detecion.
	* configure: Regnerate

2018-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac: Correct last commit.
	* configure: Regnerate

2018-01-28 Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac: Improve checks for flite.
	* configure: Regnerate
	* Tools/speech/GNUmakefile: Use variables for flite libraries.
	* Tools/speech/FliteSpeechEngine.m: Switch to use register_cmu_us_kal16.

2018-01-24 Fred Kiefer <FredKiefer@gmx.de>

	* Printing/GSCUPS/GSCUPSPrintOperation.m:
	Restore -allocWithZone: methods as this is needed to override
	behaviour in superclass.

2018-01-23 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-targetForAction:to:from:): Warn about
	the target not responding to the action.
	* Source/NSSavePanel.m (_initWithoutGModel): Don't set the OK
	button as the target of the browser. Use helper method instead.

2018-01-22 Gregory John Casamento <greg.casamento@gmail.com>

	* Tools/speech/GSSpeechSynthesizer.m: Correct compilation
	error in for loop in connectionDied: method.

2018-01-21 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/speech/GNUmakefile: Remove specific OBJC flags.
	Fixes bug #46939.

2018-01-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m (-update): Restructure by splitting up into two
	helper methods.
	* Source/NSMenu.m (-performKeyEquivalent:): Use new helper method
	to only autoenable menu item with matching key equivalent.

2018-01-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSLayoutManager.m
	(-glyphRangeForCharacterRange:actualCharacterRange:): Try to